--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "vendor": "vtex",
-  "name": "minimumtheme",
+  "vendor": "hiringcoders2021",
+  "name": "soarestheme",
   "version": "0.1.1",
   "builders": {
     "styles": "2.x",
@@ -44,7 +44,19 @@
     "vtex.iframe": "0.x",
     "vtex.breadcrumb": "1.x",
     "vtex.sticky-layout": "0.x",
-    "vtex.add-to-cart-button": "0.x"
+    "vtex.add-to-cart-button": "0.x",
+    "vtex.store-image": "0.x",
+    "vtex.css-handles": "0.x",
+    "vtex.condition-layout": "1.x",
+    "vtex.store-link": "0.x",
+    "vtex.modal-layout": "0.x",
+    "vtex.product-price": "1.x",
+    "vtex.product-list": "0.x",
+    "vtex.search": "2.x",
+    "vtex.store-icons": "0.x",
+    "vtex.checkout-summary": "0.x",
+    "vtex.product-highlights": "2.x",
+    "vtex.store-video": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
