--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -1,26 +1,85 @@
 {
   "footer": {
-    "blocks": ["footer-layout.desktop", "footer-layout.mobile"]
-  },
-  "footer-layout.desktop": { 
-    "children": [
-      "flex-layout.row#footer"
+    "blocks": [
+      "footer-layout.desktop",
+      "footer-layout.mobile"
     ]
   },
-  "footer-layout.mobile": { 
+  "footer-layout.desktop": {
     "children": [
-      "flex-layout.row#footer"
+      "sticky-layout#desktop-footer"
     ]
   },
-  "flex-layout.row#footer": { 
-    "children": [
-      "image"
-    ]
-  },
-  "image": {
+  "sticky-layout#desktop-footer": {
     "props": {
-      "width": 100,
-      "src": "https://brand.vtex.com/static/media/VTEX_pink_RGB.751a9fb5.svg"
+      "blockClass": "sticky-footer"
+    },
+    "children": [
+      "flex-layout.row#footer-desktop"
+    ]
+  },
+  "flex-layout.row#desktop-footer": {
+    "props": {
+      "horizontalAlign": "center",
+      "verticalAlign": "center",
+      "preventHorizontalStretch": true,
+      "preventVerticalStretch": true,
+      "fullWidth": true
+    },
+    "children": [
+      "login",
+      "minicart.v2"
+    ]
+  },
+  "sticky-layout#mobile-footer": {
+    "children": [
+      "flex-layout.row#footer-mobile"
+    ]
+  },
+  "flex-layout.row#mobile-footer": {
+    "children": [
+      "login",
+      "minicart.v2"
+    ],
+    "props": {
+      "blockClass": "main-footer-mobile",
+      "preventHorizontalStretch": true,
+      "preserveLayoutOnMobile": true,
+      "fullWidth": true
+    }
+  },
+  "footer-layout.mobile": {
+    "children": [
+      "flex-layout.row#footer-mobile",
+      "sticky-layout#mobile-footer"
+    ]
+  },
+  "flex-layout.row#footer-desktop": {
+    "children": [
+      "social-networks"
+    ]
+  },
+  "flex-layout.row#footer-mobile": {
+    "children": [
+      "social-networks"
+    ]
+  },
+  "social-networks": {
+    "props": {
+      "socialNetworks": [
+        {
+          "url": "https://facebook.com/foo",
+          "name": "Facebook"
+        },
+        {
+          "url": "https://twitter.com/foo",
+          "name": "Twitter"
+        },
+        {
+          "url": "https://youtube.com/foo",
+          "name": "Youtube"
+        }
+      ]
     }
   }
 }
